--- a/src/index.module.scss
+++ b/src/index.module.scss
@@ -23,20 +23,7 @@
 }
 
 body {
-  margin: 1em;
+  margin: 0;
   font-family: InsightWebRegular, Verdana, Helvetica, Arial, sans-serif;
   font-size: 14px;
-}
-
-body::after {
-  content: "";
-  background: url("./assets/images/background-patern-50-percent.jpg");
-  background-repeat: repeat;
-  opacity: 0.5;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  position: absolute;
-  z-index: -1;
 }
