create-template-button-component

--- a/src/components/LoggedInUser/LoggedInUser.module.scss
+++ b/src/components/LoggedInUser/LoggedInUser.module.scss
@@ -1,9 +1,10 @@
-.logged-in-user {
-  background-color: #c0d6ae;
-  border-radius: 50%;
-  border: 2px solid #353434;
+// .logged-in-user {
+//   background-color: #c0d6ae;
 
-  >img {
-    width: 70px;
-  }
-}
+//   //   border-radius: 50%;
+//   //   border: 2px solid #353434;
+
+//   //   >img {
+//   //     width: 70px;
+//   //   }
+// }
