--- a/src/index.module.scss
+++ b/src/index.module.scss
@@ -1,26 +1,4 @@
-@font-face {
-  font-family: InsightWebBold;
-  src: url("./assets/font-styles/insight_web_bold.eot");
-  src: url("./assets/font-styles/insight_web_bold.eot?#iefix") format("embedded-opentype"), url("./assets/font-styles/insight_web_bold.ttf") format("truetype");
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: InsightWebRegular;
-  src: url("./assets/font-styles/insight_web_regular.eot");
-  src: url("./assets/font-styles/insight_web_regular.eot?#iefix") format("embedded-opentype"), url("./assets/font-styles/insight_web_regular.ttf") format("truetype");
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: InsightDisplayWebLight;
-  src: url("./assets/font-styles/insight_web_light.eot");
-  src: url("./assets/font-styles/insight_web_light.eot?#iefix") format("embedded-opentype"), url("./assets/font-styles/insight_web_light.ttf") format("truetype");
-  font-weight: normal;
-  font-style: normal;
-}
+@import "./assets/stylesheets/index";
 
 body {
   margin: 0;
