--- a/src/components/LoggedInUser/LoggedInUser.module.scss
+++ b/src/components/LoggedInUser/LoggedInUser.module.scss
@@ -1,10 +1,5 @@
 // .logged-in-user {
-//   background-color: #c0d6ae;
-
-//   //   border-radius: 50%;
-//   //   border: 2px solid #353434;
-
-//   //   >img {
-//   //     width: 70px;
-//   //   }
+//   :local .fw-button {
+//     height: 80px !important;
+//   }
 // }
