--- a/src/utils/templates/Button/FwButton.module.scss
+++ b/src/utils/templates/Button/FwButton.module.scss
@@ -1,13 +1,19 @@
 @import "../../../assets/stylesheets/_variables.scss";
 
 .fw-button {
-  height: 40px;
+  height: auto;
+  width: auto;
   font-family: InsightWebBold, Arial, sans-serif !important;
   font-size: 14px;
   display: flex;
   align-items: center;
   border-radius: 2rem;
   padding: 0.5em 1em;
+
+  &:hover,
+  &:active {
+    cursor: pointer;
+  }
 
   &:focus,
   &:focus-visible {
@@ -16,47 +22,68 @@
     border-radius: 2rem;
   }
 
+  &.animation-progress {
+    &:hover {
+      animation: progress 0.5s ease-in-out;
+    }
+  }
+
+  &.animation-jello {
+    &:hover {
+      animation: jello 0.5s both;
+    }
+  }
+
   &.primary {
     color: $fw-default-text;
-    background-color: $fw-btn-primary;
     border: 2px solid $fw-btn-border;
+    background-size: 200% 100%;
+    background-image: linear-gradient(to left, $fw-btn-hover 50%, $fw-btn-primary 50%);
+    box-shadow:
+      inset 0 -0.3em 0.5em -0.15em $fw-btn-border,
+      inset 0 0.3em 1em -0.15em rgb(255 255 255 / 53%),
+      inset 0 0 0 0.05em rgb(255 255 255 / 50%);
 
     &:hover,
     &:active {
-      background-color: $fw-btn-hover;
       border-color: $fw-white;
       color: $fw-white;
     }
 
     &:focus {
       background-color: $fw-btn-primary;
-      border: 2px solid $fw-btn-primary;
+      border: 2px solid $fw-btn-secondary;
       color: $fw-white;
-      box-shadow: inset 0 0 0 1px $fw-white;
+      box-shadow: inset 0 0 0 2px $fw-white;
     }
 
     &.is-disabled {
-      color: $fw-btn-primary-disabled;
-      background-color: $fw-btn-secondary-disabled;
+      color: $fw-btn-secondary-disabled;
+      background-color: $fw-btn-primary-disabled;
       border: 2px solid $fw-btn-secondary-disabled;
     }
   }
 
   &.secondary {
-    color: $fw-btn-primary;
-    background-color: $fw-white;
-    border: 2rem solid $fw-btn-primary;
+    color: $fw-btn-secondary;
+    background-size: 200% 100%;
+    background-image: linear-gradient(to left, $fw-btn-primary 50%, $fw-white 50%);
+    box-shadow:
+      inset 0 -0.3em 0.5em -0.15em $fw-btn-secondary,
+      inset 0 0.3em 1em -0.15em rgb(255 255 255 / 53%),
+      inset 0 0 0 0.05em rgb(255 255 255 / 50%);
 
     &:hover,
     &:active {
-      background-color: $fw-btn-hover;
+      color: $fw-btn-hover;
+      border-color: $fw-btn-hover;
     }
 
     &:focus {
-      background-color: $fw-white;
-      border: 2px solid $fw-btn-primary;
-      color: $fw-btn-primary;
-      box-shadow: inset 0 0 0 2px $fw-white;
+      background-color: $fw-btn-primary;
+      border: 2px solid $fw-btn-secondary;
+      color: $fw-btn-secondary;
+      box-shadow: inset 0 0 0 2px $fw-btn-secondary;
     }
 
     &.is-disabled {
@@ -65,16 +92,48 @@
       border: 1px solid $fw-btn-secondary-disabled;
     }
   }
+
+  > img {
+    height: 50px;
+  }
 }
 
-.fw-button-tooltip {
-  color: $fw-default-text !important;
-  background-color: $fw-white !important;
-  border: 1px solid $fw-btn-secondary-disabled !important;
-  border-radius: 0.375rem !important;
-  padding: 4px 8px !important;
+@keyframes progress {
+  100% {
+    background-position: 0 0;
+  }
 
-  &::after {
-    border-top-color: $fw-white !important;
+  0% {
+    background-position: 100% 0;
+  }
+}
+
+@keyframes jello {
+  0% {
+    transform: scale3d(1, 1, 1);
+  }
+
+  30% {
+    transform: scale3d(1.25, 0.75, 1);
+  }
+
+  40% {
+    transform: scale3d(0.75, 1.25, 1);
+  }
+
+  50% {
+    transform: scale3d(1.15, 0.85, 1);
+  }
+
+  65% {
+    transform: scale3d(0.95, 1.05, 1);
+  }
+
+  75% {
+    transform: scale3d(1.05, 0.95, 1);
+  }
+
+  100% {
+    transform: scale3d(1, 1, 1);
   }
 }
