create-side-navigation-burger

--- a/src/assets/stylesheets/_variables.scss
+++ b/src/assets/stylesheets/_variables.scss
@@ -11,7 +11,7 @@ $fw-primary-disabled: #dedede;
 $fw-secondary-disabled: #9a9a9a;
 
 // Generic Theme colors2(neon)
-// $fw-default-text: $fw-black;
+// $fw-default-text: #464646;
 // $fw-primary: #08fdd8;
 // $fw-secondary: darken($fw-primary, 6.5%);
 // $fw-border: $fw-black;
