--- a/src/components/SideNavigation/SideNavigation.module.scss
+++ b/src/components/SideNavigation/SideNavigation.module.scss
@@ -1,5 +1,49 @@
+@import "../../assets/stylesheets/_variables.scss";
+
 .side-navigation {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+
+  .side-navigation-panel {
+    display: flex;
+    flex-direction: column;
+    // height: 80vh;
+    background-color: $fw-default-text;
+    border-radius: 0 0 0.5em;
+    position: absolute;
+    left: -0.5em;
+    top: 8px;
+    width: 90px;
+
+    .side-navigation-button {
+      padding: 0.5em;
+      display: flex;
+
+      > button {
+        &:focus {
+          &::after {
+            content: "";
+            border: 3px solid $fw-primary;
+            color: $fw-primary;
+            border-radius: 5px;
+            height: 50px;
+            position: absolute;
+            left: 90%;
+            animation: grow 0.5s forwards;
+          }
+        }
+      }
+    }
+  }
+}
+
+@keyframes grow {
+  from {
+    height: 0;
+  }
+
+  to {
+    height: 50px;
+  }
 }
