--- a/src/components/Layout/PageHeader/PageHeader.module.scss
+++ b/src/components/Layout/PageHeader/PageHeader.module.scss
@@ -3,10 +3,10 @@
 .page-header {
   margin: 0;
   padding: 0.5em;
-  border-bottom: 2px solid $fw-default-text;
+  border-bottom: 2px solid transparent;
   display: flex;
   flex-direction: row;
-  background-color: $fw-primary;
+  background-color: transparent;
 
   .app-details {
     flex: 1;
@@ -14,16 +14,19 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    font-family: InsightWebBold, Verdana, Helvetica, Arial, sans-serif;
+    color: $fw-primary;
     padding-left: 1em;
-    animation: tracking-in-expand 1s cubic-bezier(0.215, 0.61, 0.355, 1) both;
 
     .app-name {
+      animation: tracking-in-expand 2s cubic-bezier(0.215, 0.61, 0.355, 1) both;
       font-size: 40px;
     }
 
-    .app-details {
+    .app-description {
       font-size: 20px;
-      animation-delay: 2s;
+      animation: tracking-in-expand 2s cubic-bezier(0.215, 0.61, 0.355, 1) both;
+      animation-delay: 1s;
     }
   }
 }
