--- a/src/components/SideNavigation/SideNavigation.module.scss
+++ b/src/components/SideNavigation/SideNavigation.module.scss
@@ -9,7 +9,7 @@
     display: flex;
     flex-direction: column;
     // height: 80vh;
-    background-color: $fw-default-text;
+    background-color: transparent;
     border-radius: 0 0 0.5em;
     position: absolute;
     left: -0.5em;
