--- a/src/utils/templates/Button/FwButton.module.scss
+++ b/src/utils/templates/Button/FwButton.module.scss
@@ -47,7 +47,7 @@
     background-size: 200% 100%;
     background-image: linear-gradient(to left, $fw-btn-hover 50%, $fw-btn-primary 50%);
     box-shadow:
-      inset 0 -0.3em 0.5em -0.15em $fw-btn-border,
+      inset 0 -0.3em 0.5em -0.15em $fw-secondary,
       inset 0 0.3em 1em -0.15em rgb(255 255 255 / 53%),
       inset 0 0 0 0.05em rgb(255 255 255 / 50%);
 
@@ -90,7 +90,7 @@
       background-color: $fw-btn-primary;
       border: 2px solid $fw-btn-secondary;
       color: $fw-btn-secondary;
-      box-shadow: inset 0 0 0 2px $fw-btn-secondary;
+      box-shadow: inset 0 0 10px $fw-btn-secondary;
     }
 
     &.is-disabled {
