create-side-navigation-burger

--- a/src/assets/stylesheets/_variables.scss
+++ b/src/assets/stylesheets/_variables.scss
@@ -2,10 +2,10 @@
 $fw-white: white;
 $fw-black: black;
 
-// Generic Light Theme(red)
+// Generic Light Theme(orange)
 // $fw-default-text: #464646;
-// $fw-primary: #ff6e6e;
-// $fw-secondary: #fff0d9;
+// $fw-primary: #ff7535;
+// $fw-secondary: #023020;
 // $fw-border: #464646;
 // $fw-primary-disabled: #dedede;
 // $fw-secondary-disabled: #9a9a9a;
