--- a/src/components/Layout/PageFooter/PageFooter.module.scss
+++ b/src/components/Layout/PageFooter/PageFooter.module.scss
@@ -7,7 +7,7 @@
   justify-content: center;
   border-top: 2px solid transparent;
   background-size: 200% 100%;
-  background-image: linear-gradient(to left, $fw-default-text 50%, transparent 50%);
+  background-image: linear-gradient(to left, $fw-primary 50%, transparent 50%);
   z-index: 0;
 
   &.animation {
