lazy loading comp cretes, also demo mocked dummy component to showcase use

--- a/src/components/Layout/PageContent/PageContent.module.scss
+++ b/src/components/Layout/PageContent/PageContent.module.scss
@@ -1,5 +1,18 @@
 .page-content {
   margin: 1em;
   flex: 1;
-  align-self: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  .buttons {
+    display: flex;
+    justify-content: center;
+  }
+
+  .suspense {
+    display: flex;
+    justify-content: center;
+    height: 300px;
+  }
 }
