--- a/src/components/Loading/Loading.module.scss
+++ b/src/components/Loading/Loading.module.scss
@@ -1,5 +1,5 @@
-// .logged-in-user {
-//   :local .fw-button {
-//     height: 80px !important;
-//   }
-// }
+.loading {
+  > img {
+    border-radius: 50%;
+  }
+}
