--- a/src/components/Layout/PageContent/PageContent.module.scss
+++ b/src/components/Layout/PageContent/PageContent.module.scss
@@ -1,3 +1,7 @@
-// .page-content {
-
-// }
+.page-content {
+  margin: 1em;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
