--- a/src/components/Layout/PageContent/PageContent.module.scss
+++ b/src/components/Layout/PageContent/PageContent.module.scss
@@ -1,7 +1,20 @@
-.page-content {
-  margin: 0 1em 1em 6em;
+@import "../../../assets/stylesheets/_variables.scss";
+
+.transition-wrapper {
   flex: 1;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  margin: 0 0.5em 0.5em 6.9em;
+  height: auto;
+  backface-visibility: hidden;
+  border: 2px solid $fw-primary;
+  border-radius: 5px;
+  padding: 1em;
+
+  .page-content {
+    // height: 95%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    backdrop-filter: brightness(20%) blur(8px);
+  }
 }
