--- a/src/components/Ingredients/Ingredients.module.scss
+++ b/src/components/Ingredients/Ingredients.module.scss
@@ -1,3 +1,5 @@
+@import "../../assets/stylesheets/_variables.scss";
+
 .ingredients {
   width: 100%;
   display: flex;
@@ -50,13 +52,12 @@
 
   .table {
     width: 60%;
-    background-color: black;
-    border: 2px solid #59bfaa;
-    color: #59bfaa;
+    border: 2px solid $fw-primary;
+    color: $fw-primary;
     font-size: 18px;
 
     .thead {
-      border-bottom: 2px solid #59bfaa;
+      border-bottom: 2px solid $fw-primary;
     }
 
     .tbody {
