--- a/src/components/RecipeBook/RecipeBook.module.scss
+++ b/src/components/RecipeBook/RecipeBook.module.scss
@@ -1,5 +1,7 @@
 .recipe-book {
   color: #59bfaa;
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
 }
