create-template-dropdown-component

--- a/src/shared/templates/Button/FwButton.module.scss
+++ b/src/shared/templates/Button/FwButton.module.scss
@@ -4,11 +4,11 @@
   height: auto;
   min-height: 40px;
   width: auto;
-  font-family: InsightWebBold, Arial, sans-serif !important;
-  font-size: 14px;
+  font-family: InsightWebRegular, Arial, sans-serif;
+  font-size: 16px;
   display: flex;
   align-items: center;
-  border-radius: 2px;
+  border-radius: 0.375rem;
   padding: 0.5em 1em;
 
   &:hover,
