--- a/src/shared/templates/Dropdown/FwDropdown.module.scss
+++ b/src/shared/templates/Dropdown/FwDropdown.module.scss
@@ -12,34 +12,114 @@
     align-items: center;
     height: 40px;
     width: 100%;
+    font-family: InsightWebRegular, Arial, sans-serif;
+    font-size: 16px;
     color: $fw-default-text;
     background-color: $fw-white;
     border: 2px solid $fw-btn-border;
     border-radius: 0.375rem;
-    padding: 10px 16px;
+    padding: 0.5em 1em;
 
     &:hover,
+    &:active {
+      cursor: pointer;
+    }
+
     &:focus,
     &:focus-visible {
       outline: none;
-      border: 2px solid $fw-btn-border;
       box-sizing: border-box;
-      box-shadow: none;
     }
 
-    &.isDisabled {
-      color: $fw-btn-primary-disabled;
+    &.animation-progress {
+      &:hover {
+        animation: progress 0.5s ease-in-out;
+      }
+    }
 
-      &:hover,
-      &:focus,
-      &:focus-visible {
-        outline: none;
-        border: 2px solid $fw-btn-primary-disabled;
+    &.animation-jello {
+      &:hover {
+        animation: jello 0.5s both;
+      }
+    }
+
+    &.animation-pulse {
+      animation: pulse 2s infinite;
+
+      &:hover {
+        animation: none;
       }
     }
 
     &::after {
       content: none;
+    }
+
+    &.primary {
+      color: $fw-default-text;
+      border: 1px solid $fw-btn-border;
+      background-size: 200% 100%;
+      background-image: linear-gradient(to left, $fw-btn-hover 50%, $fw-btn-primary 50%);
+      box-shadow:
+        inset 0 -0.3em 0.5em -0.15em $fw-secondary,
+        inset 0 0.3em 1em -0.15em rgb(255 255 255 / 53%),
+        inset 0 0 0 0.05em rgb(255 255 255 / 50%);
+
+      &:hover,
+      &:active {
+        border-color: $fw-white;
+        color: $fw-white;
+      }
+
+      &:focus {
+        background-color: $fw-btn-primary;
+        border: 1px solid $fw-btn-secondary;
+        color: $fw-white;
+        box-shadow: inset 0 0 0 2px $fw-white;
+      }
+
+      &.is-disabled {
+        color: $fw-btn-secondary-disabled;
+        background-color: $fw-btn-primary-disabled;
+        border: 1px solid $fw-btn-secondary-disabled;
+
+        &:hover,
+        &:focus,
+        &:focus-visible {
+          outline: none;
+          border: 2px solid $fw-btn-primary-disabled;
+        }
+      }
+    }
+
+    &.secondary {
+      color: $fw-btn-primary;
+      border: 1px solid $fw-btn-border;
+      background-size: 200% 100%;
+      background-image: linear-gradient(to right, $fw-white 50%, $fw-btn-primary 50%);
+      box-shadow:
+        inset 0 -0.3em 0.5em -0.15em $fw-btn-primary,
+        inset 0 0.3em 1em -0.15em rgb(255 255 255 / 53%),
+        inset 0 0 0 0.05em rgb(255 255 255 / 50%);
+
+      &:hover,
+      &:active {
+        color: $fw-primary;
+        border-color: $fw-btn-hover;
+      }
+
+      &:focus {
+        background-color: $fw-btn-primary;
+        border: 1px solid $fw-btn-secondary;
+        color: $fw-btn-secondary;
+        box-shadow: inset 0 0 10px $fw-btn-primary;
+      }
+
+      &.is-disabled {
+        color: $fw-btn-primary-disabled;
+        background-color: $fw-btn-secondary-disabled;
+        border: 1px solid $fw-btn-secondary-disabled;
+      }
     }
   }
 
@@ -48,6 +128,8 @@
     flex-direction: column;
     min-width: 100%;
     max-height: 200px;
+    font-family: InsightWebRegular, Arial, sans-serif;
+    font-size: 16px;
     overflow-y: auto;
     line-height: 1;
     background-color: $fw-white;
