create-template-dropdown-component

--- a/src/components/Ingredients/Ingredients.module.scss
+++ b/src/components/Ingredients/Ingredients.module.scss
@@ -71,5 +71,9 @@
 
   .ingredients-dropdown {
     width: 50%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    gap: 2rem;
   }
 }
