--- a/src/shared/templates/Dropdown/FwDropdown.module.scss
+++ b/src/shared/templates/Dropdown/FwDropdown.module.scss
@@ -55,6 +55,10 @@
       content: none;
     }
 
+    > svg > path {
+      stroke: $fw-default-text;
+    }
+
     &.primary {
       color: $fw-default-text;
       border: 1px solid $fw-btn-border;
@@ -136,6 +140,10 @@
     border: 1px solid $fw-border;
     border-radius: 0.375rem;
 
+    &.hide {
+      display: none;
+    }
+
     .fw-dropdown-item {
       display: flex;
       flex-direction: row;
@@ -148,13 +156,14 @@
       white-space: nowrap;
       background-color: transparent;
       border: 0;
+      box-sizing: border-box;
 
       &:hover,
+      &:active,
       &:focus,
       &:focus-visible {
         outline: none;
-        color: $fw-default-text;
-        background-color: $fw-white;
+        background-color: lighten($fw-primary, 30%);
       }
 
       &.fw-dropdown-item-selected {
