--- a/src/shared/templates/Dropdown/FwDropdown.module.scss
+++ b/src/shared/templates/Dropdown/FwDropdown.module.scss
@@ -10,6 +10,7 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    gap: 5px;
     height: 40px;
     width: 100%;
     font-family: InsightWebRegular, Arial, sans-serif;
@@ -19,6 +20,9 @@
     border: 2px solid $fw-btn-border;
     border-radius: 0.375rem;
     padding: 0.5em 1em;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 
     &:hover,
     &:active {
@@ -130,6 +134,7 @@
   .fw-dropdown-menu {
     display: flex;
     flex-direction: column;
+    max-width: 100%;
     min-width: 100%;
     max-height: 200px;
     font-family: InsightWebRegular, Arial, sans-serif;
@@ -148,6 +153,7 @@
       display: flex;
       flex-direction: row;
       justify-content: space-between;
+      align-items: center;
       height: 40px;
       padding: 10px 16px;
       color: $fw-default-text;
@@ -168,6 +174,68 @@
 
       &.fw-dropdown-item-selected {
         background-color: $fw-primary;
+      }
+
+      > svg > path {
+        stroke: $fw-default-text;
+      }
+    }
+
+    .fw-dropdown-search {
+      display: flex;
+      flex-direction: row;
+      border-bottom: 2px solid $fw-default-text;
+      max-width: 100%;
+      gap: 5px;
+
+      &:hover,
+      &:active,
+      &:focus,
+      &:focus-visible {
+        outline: none;
+        background-color: lighten($fw-primary, 30%);
+      }
+
+      .fw-dropdown-search-area {
+        min-height: 40px;
+        padding: 10px 16px;
+        overflow-x: auto;
+        font-family: InsightWebRegular, Arial, sans-serif;
+        font-size: 16px;
+        color: $fw-default-text;
+        text-align: inherit;
+        text-decoration: none;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        background-color: transparent;
+        border: 0;
+        box-sizing: border-box;
+
+        &:hover,
+        &:active,
+        &:focus,
+        &:focus-visible {
+          outline: none;
+        }
+      }
+
+      .fw-dropdown-findings {
+        display: flex;
+        align-items: center;
+        margin-left: auto;
+        color: $fw-default-text;
+      }
+
+      .fw-dropdown-button {
+        margin-left: auto;
+
+        > button {
+          > img {
+            height: 23px;
+            width: 23px;
+          }
+        }
       }
     }
   }
