--- a/src/shared/templates/CheckboxList/FWCheckboxList.module.scss
+++ b/src/shared/templates/CheckboxList/FWCheckboxList.module.scss
@@ -36,8 +36,8 @@
 
     .fw-checkbox-box {
       margin-left: auto;
-      width: 20px;
-      height: 20px;
+      // width: 18px;
+      // height: 18px;
 
       &.checked {
         filter: drop-shadow(0 0 0.5rem $fw-primary);
