--- a/src/components/Layout/PageContent/PageContent.module.scss
+++ b/src/components/Layout/PageContent/PageContent.module.scss
@@ -6,8 +6,8 @@
   height: auto;
   backface-visibility: hidden;
   border: 2px solid $fw-primary;
-  border-radius: 5px;
-  padding: 1em;
+  border-radius: 0.5em;
+  padding: 0.5em;
 
   .page-content {
     // height: 95%;
@@ -16,5 +16,7 @@
     justify-content: center;
     align-items: center;
     backdrop-filter: brightness(20%) blur(8px);
+    width: auto;
+    height: 100%;
   }
 }
