--- a/src/components/Layout/PageContent/PageContent.module.scss
+++ b/src/components/Layout/PageContent/PageContent.module.scss
@@ -8,14 +8,14 @@
   border: 2px solid $fw-primary;
   border-radius: 0.5em;
   padding: 0.5em;
+  backdrop-filter: brightness(20%) blur(8px);
 
   .page-content {
-    // height: 95%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    backdrop-filter: brightness(20%) blur(8px);
+    // backdrop-filter: brightness(20%) blur(8px);
     width: auto;
     height: 100%;
   }
