--- a/src/shared/templates/Modal/Modal.module.scss
+++ b/src/shared/templates/Modal/Modal.module.scss
@@ -9,7 +9,7 @@
   padding: 0;
   position: fixed;
   inset: 0;
-  background-color: rgb(0 0 0 / 60%);
+  backdrop-filter: brightness(20%) blur(16px);
   overflow: hidden;
   z-index: 999;
   opacity: 0;
@@ -29,15 +29,14 @@
   }
 
   .fw-modal-content {
-    width: 80%;
+    width: 60%;
     height: 80%;
     display: flex;
     flex-direction: column;
     font-family: InsightWebRegular, Arial, sans-serif;
     font-size: 16px;
     color: $fw-primary;
-    background: lighten($fw-black, 10%);
-    border: 1px solid $fw-primary;
+    border: 2px solid $fw-primary;
     border-radius: 0.5em;
     margin: 0;
     z-index: 100;
@@ -46,7 +45,8 @@
       display: flex;
       flex-direction: row;
       justify-content: space-between;
-      padding: 16px 16px 16px 24px;
+      border-bottom: 2px solid $fw-primary;
+      padding: 8px 8px 8px 24px;
 
       .fw-modal-header-title {
         display: flex;
@@ -54,27 +54,37 @@
         margin-right: auto;
         font-size: 20px;
       }
-      // .fw-modal-header-buttons {
 
-      // }
+      .fw-modal-header-button {
+        width: 40px !important;
+        height: 40px !important;
+
+        > button {
+          border-radius: 0.375rem !important;
+          padding: 0.3em !important;
+        }
+      }
     }
 
     .fw-modal-body {
       height: 100%;
-      padding: 8px 24px 24px;
+      padding: 8px;
       overflow: auto;
       white-space: pre-wrap;
     }
 
     .fw-modal-footer {
-      align-self: flex-end;
       display: flex;
       flex-direction: row;
       justify-content: flex-end;
-      // background-color: #f6f6f6;
-      padding: 24px;
-      border-top: 1px solid #dedede;
-      border-radius: 5px;
+      padding: 8px;
+      border-top: 2px solid $fw-primary;
+
+      .fw-modal-footer-buttons {
+        display: flex;
+        justify-content: flex-end;
+        gap: 1em;
+      }
     }
   }
 }
