--- a/src/shared/templates/Textarea/FWTextarea.module.scss
+++ b/src/shared/templates/Textarea/FWTextarea.module.scss
@@ -5,8 +5,11 @@
   flex-direction: row;
   background-color: $fw-white;
   border-radius: 0.375rem;
+  font-family: InsightWebRegular, Arial, sans-serif;
+  font-size: 16px;
   max-width: 100%;
   min-width: 150px;
+  height: 100%;
   gap: 5px;
 
   &:hover,
@@ -21,8 +24,6 @@
     min-height: 40px;
     padding: 10px 16px;
     overflow-x: auto;
-    font-family: InsightWebRegular, Arial, sans-serif;
-    font-size: 16px;
     color: $fw-default-text;
     text-align: inherit;
     text-decoration: none;
@@ -65,10 +66,12 @@
         border-color: $fw-border !important;
         box-shadow: none !important;
       }
+    }
 
-      > img {
-        height: 40px;
-        width: 40px;
+    &.dropdown-search {
+      > button {
+        padding: 0.3em !important;
+        border-radius: 0 !important;
       }
     }
   }
