create-recipe-and-recipe-book-components

--- a/src/assets/stylesheets/_variables.scss
+++ b/src/assets/stylesheets/_variables.scss
@@ -2,6 +2,10 @@
 $fw-white: white;
 $fw-black: black;
 
+// Validation colors
+$fw-valid: #198754;
+$fw-error: #dc3545;
+
 // Generic Light Theme(orange)
 // $fw-default-text: #464646;
 // $fw-primary: #ff7535;
