--- a/src/shared/templates/CheckboxList/FWCheckboxList.module.scss
+++ b/src/shared/templates/CheckboxList/FWCheckboxList.module.scss
@@ -1,47 +1,57 @@
 @import "../../../assets/stylesheets/_variables.scss";
 
-.fw-checkbox-list {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
-  width: 100%;
-
-  &.column {
-    flex-direction: column;
-    gap: 0.2em;
-  }
-
-  &.row {
-    flex-direction: row;
-    gap: 1.5em;
-  }
-
-  .fw-checkbox {
+.fw-form-control {
+  .fw-checkbox-list {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: flex-start;
-    align-items: center;
+    align-items: flex-start;
     width: 100%;
-    gap: 0.1em;
 
-    .fw-checkbox-label {
-      flex: 1;
-      font-family: InsightWebRegular, Arial, sans-serif;
-      font-size: 16px;
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
+    &.column {
+      flex-direction: column;
+      gap: 0.2em;
     }
 
-    .fw-checkbox-box {
-      margin-left: auto;
-      // width: 18px;
-      // height: 18px;
+    &.row {
+      flex-direction: row;
+      gap: 1.5em;
+    }
 
-      &.checked {
-        filter: drop-shadow(0 0 0.5rem $fw-primary);
+    .fw-checkbox-list-label {
+      font-family: InsightWebBold, Arial, sans-serif;
+      font-size: 20px;
+    }
+
+    .fw-checkbox {
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-start;
+      align-items: center;
+      width: 100%;
+      gap: 0.1em;
+
+      .fw-checkbox-label {
+        flex: 1;
+        font-family: InsightWebRegular, Arial, sans-serif;
+        font-size: 16px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
       }
+
+      .fw-checkbox-box {
+        margin-left: auto;
+
+        &.checked {
+          filter: drop-shadow(0 0 0.5rem $fw-primary);
+        }
+      }
+    }
+
+    .fw-checkbox-list-error {
+      font-size: 14px;
+      color: $fw-error;
     }
   }
 }
