--- a/src/shared/templates/Input/FwInput.module.scss
+++ b/src/shared/templates/Input/FwInput.module.scss
@@ -8,31 +8,38 @@
   flex-direction: column;
   justify-content: flex-end;
   max-width: 100%;
-  min-width: 150px;
 
-  .fw-textarea-group {
+  input[type="number"]::-webkit-outer-spin-button,
+  input[type="number"]::-webkit-inner-spin-button {
+    appearance: none;
+    margin: 0;
+  }
+
+  .fw-input-group {
     display: flex;
     flex-direction: column;
 
-    .fw-textarea-label {
+    .fw-input-label {
       font-family: InsightWebBold, Arial, sans-serif;
       font-size: 20px;
     }
 
-    .fw-textarea-box {
+    .fw-input-box {
       font-family: InsightWebRegular, Arial, sans-serif;
       font-size: 16px;
       min-height: 40px;
       padding: 0.375rem 2.5rem 0.375rem 0.375rem;
+      overflow-x: auto;
       color: $fw-primary;
       text-align: inherit;
       text-decoration: none;
       white-space: nowrap;
       overflow: hidden;
-      resize: none;
+      text-overflow: ellipsis;
       background-color: transparent;
       border: 1px solid $fw-primary;
       border-radius: 0.375rem;
+      box-sizing: border-box;
 
       &:hover,
       &:active,
@@ -58,7 +65,7 @@
       }
     }
 
-    .fw-textarea-error {
+    .fw-input-error {
       font-size: 14px;
       color: $fw-error;
     }
